--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -1,86 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>GameBay Login</title>
+    <title>GameBay Panel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
-    <style>
-        .logo-text{
-            color:#eda007;
-        }
-        body {
-            padding-top: 90px
-        }
-
-        @media (min-width: 768px) {
-            body {
-                padding-top: 0
-            }
-        }
-
-        @media (min-width: 768px) {
-            body {
-                margin-left: 232px
-            }
-        }
-
-        .navbar.fixed-left {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1030
-        }
-
-        @media (min-width: 768px) {
-            .navbar.fixed-left {
-                bottom: 0;
-                width: 232px;
-                flex-flow: column nowrap;
-                align-items: flex-start
-            }
-
-            .navbar.fixed-left .navbar-collapse {
-                flex-grow: 0;
-                flex-direction: column;
-                width: 100%
-            }
-
-            .navbar.fixed-left .navbar-collapse .navbar-nav {
-                flex-direction: column;
-                width: 100%
-            }
-
-            .navbar.fixed-left .navbar-collapse .navbar-nav .nav-item {
-                width: 100%
-            }
-
-            .navbar.fixed-left .navbar-collapse .navbar-nav .nav-item .dropdown-menu {
-                top: 0
-            }
-        }
-
-        @media (min-width: 768px) {
-            .navbar.fixed-left {
-                right: auto
-            }
-
-            .navbar.fixed-left .navbar-nav .nav-item .dropdown-toggle:after {
-                border-top: .3em solid transparent;
-                border-left: .3em solid;
-                border-bottom: .3em solid transparent;
-                border-right: none;
-                vertical-align: baseline
-            }
-
-            .navbar.fixed-left .navbar-nav .nav-item .dropdown-menu {
-                left: 100%
-            }
-        }
-    </style>
+    <link href="../static/css/panelstyle.css" th:href="@{/css/panelstyle.css}" rel="stylesheet" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -113,10 +40,11 @@
                     <i class="fas fa-shopping-cart"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <div th:each="game : ${user.getCart()}">
+                        <a class="dropdown-item" href="#" th:text="${game.getTitle()}"></a>
+                    </div>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="/cart">Przejdź do koszyka</a>
                 </div>
             </li>
         </ul>
@@ -147,7 +75,7 @@
                         <a class="nav-link" href="/settings">Ustawienia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Wyloguj</a>
+                        <a class="nav-link" th:href = "@{/logout}">Wyloguj</a>
                     </li>
                 </ul>
 
@@ -155,9 +83,13 @@
 
     </nav>
 
-<p class="text-center"></p>
-
-
+<div class="container">
+<p th:text="${user.username}"></p>
+<p th:text="${user.password}"></p>
+<p th:text="${user.getId()}"></p>
+<p th:text="${user.getCoinBalance()}"></p>
+<a type="button" href="/doladowanie" class="btn btn-primary">Doładuj</a>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
