--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <link type="text/css" href="../static/css/login.css" th:href="@{/css/login.css}"/>
-
+    <style>
+        .logo-text{
+            color:#eda007;
+        }
+    </style>
 </head>
 <body style = "font-family: 'Roboto', sans-serif;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
