--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,19 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <style>
+        @media(min-width: 768px){
+            #logo{
+                margin-top: 40px;
+                font-size: 80px;
+            }
+            #form{
+                margin-top:80px;
+            }
+            #size{
+                font-size:45px;
+            }
+        }
+
         .logo-text{
             color:#eda007;
         }
